# virtualbiotech

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-singlecell.txt  requirements-stats.txt  requirements.txt
analysis/trial_outcomes/: extract_cohort.py  run_pipeline.py
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  SETUP.md
mcp_servers/cbioportal/: __init__.py  client.py  server.py  smoke.py
mcp_servers/cellxgene/: __init__.py  client.py  server.py  smoke.py
mcp_servers/clinicaltrials/: __init__.py  client.py  server.py  smoke.py
mcp_servers/dailymed/: __init__.py  client.py  server.py  smoke.py
mcp_servers/depmap/: __init__.py  data.py  server.py  smoke.py
mcp_servers/gnomad/: __init__.py  client.py  server.py  smoke.py
mcp_servers/open_targets/: __init__.py  client.py  genetics.py  (+4 more)
scripts/: datasets.py  explore.py  setup_data.py
tests/: conftest.py  test_agent_extractor.py  test_cascade.py  test_cbioportal_client.py  test_cellxgene_client.py  test_clinicaltrials_client.py  test_cohort.py  test_cohort_integration.py  test_config.py  test_dailymed_client.py  test_datasets_manifest.py  test_depmap_data.py  test_explore_cli.py  test_gnomad_client.py  test_harness.py  test_mcp_bridge.py  test_mcp_servers.py  test_open_targets_client.py  test_open_targets_genetics.py  test_openfda_client.py  test_orchestration.py  test_perturbation.py  test_pipeline.py  test_pubmed_client.py  test_regression.py  test_sc_features.py  test_tabula_data.py  test_tahoe_data.py  test_trial_schema.py  test_trial_stats.py
(+52 files in other folders)
