[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "virtual-biotech"
version = "0.1.0"
description = "A multi-agent AI framework for therapeutic discovery (re-implementation of Zhang et al., 2026)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC-BY-ND-4.0" }
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "fastmcp>=2.0.0",
    "pydantic>=2.6",
    "httpx>=0.27",
    "anyio>=4.3",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
stats = ["statsmodels>=0.14", "scipy>=1.11", "numpy>=1.26", "pandas>=2.1", "lifelines>=0.28"]
singlecell = ["scanpy>=1.10", "anndata>=0.10", "harmonypy>=0.0.10", "pydeseq2>=0.4",
              "decoupler>=1.6", "cellxgene-census>=1.15"]
ui = ["fastapi>=0.110", "uvicorn>=0.29", "websockets>=12"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/virtual_biotech"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
